# Fitness-Project

./: .pre-commit-config.yaml  README.md  docker-compose.yml  setup.cfg
.github/workflows/: ci.yml
consumer/: Dockerfile  consumer.py  pyproject.toml
mapping/: generate_mapping.py  mapping.json
prefect_flow/: Dockerfile  deployment.py  entrypoint.sh  flow.py  pyproject.toml
producer/: Dockerfile  producer.py  pyproject.toml
